--- a/app/views/users/days/_card_recipe.html.erb
+++ b/app/views/users/days/_card_recipe.html.erb
@@ -1,19 +1,20 @@
-<div class="card transform duration-200 ease-in hover:-translate-y-1">
+ <%#  transform duration-200  ease-in hover:-translate-y-1 %>
+<div class="card  ">
   <div class=" bg-gray-100 w-80 mr-5 hover:shadow-lg shadow-2-xl rounded">
         <%= image_tag day.lunch.image_url, style: 'height:100%;width:100%;margin-bottom:20px; border-radius:5px;' %>
     <div class=" py-4 px-3">
     <div class="flex flex-row items-center ">
       <%= image_tag 'clock.svg', class: "clock"%>
       <div class="text-sm ml-2 ">
-        <p><%= day.dinner.cook_time%> mins </p>
+        <p><%= day.lunch.cook_time%> mins </p>
       </div>
       <i class="fas fa-utensils ml-3"></i>
       <div class="text-sm  ml-2">
-       <p> <%= day.dinner.cal_per_serving%> calories</p>
+       <p> <%= day.lunch.cal_per_serving%> calories</p>
       </div>
     </div>
       <div class="">
-        <h1 class="text-xl font-bold  text-gray-900 mt-2 mb-3"><%= day.dinner.title%></h1>
+        <h1 class="text-xl font-bold  text-gray-900 mt-2 mb-3"><%= day.lunch.title%></h1>
         <!-- new plan modal -->   
         <div data-controller="modal" data-modal-allow-background-close="false">
         <a href="#" data-action="click->modal#open"
@@ -31,7 +32,7 @@
               <div class="m-1 bg-gray-100  rounded-lg shadow">
                 <div class="m-auto max-w-6xl p-12">
                   <div class="text-5xl text-gray-900 font-bold mb-14 text-center ">
-                   <%= day.dinner.title %>
+                   <%= day.lunch.title %>
                   </div>
             <div class="flex flex-col md:flex-row justify-center ">
              <div class="md:w-1/2 max-w-md flex flex-col justify-center lg:border-r-8 lg:border-primary-600 pr-20">
@@ -39,7 +40,7 @@
               class="text-2xl md:text-2xl font-light leading-normal">
               <p>Préparation : 
               <span class="text-xl">
-              <%= day.dinner.cook_time%> mins
+              <%= day.lunch.cook_time%> mins
               </span>
               </p> 
             </div>
@@ -50,20 +51,20 @@
               </div>
             </div>
             <ul class=" pt-4">
-              <li><%= day.dinner.cal_per_serving%> calories</li>
-              <li><%= day.dinner.prot_per_serving%> protéines</li>
-              <li><%= day.dinner.carbs_per_serving%> glucides</li>
-              <li><%= day.dinner.fat_per_serving%> lipides</li>
+              <li><%= day.lunch.cal_per_serving%> calories</li>
+              <li><%= day.lunch.prot_per_serving%> protéines</li>
+              <li><%= day.lunch.carbs_per_serving%> glucides</li>
+              <li><%= day.lunch.fat_per_serving%> lipides</li>
         
             <div class="text-2xl md:text-2xl font-light leading-normal mt-10 ">
               <p>Ingrédients </p>
               <span class="text-base ">
-                <%= day.dinner.ingredients_list %>
+                <%= day.lunch.ingredients_list %>
               </span>
             </div>
             </div>
             <div class=" max-w-lg   lg:pl-24 ">
-                <%= image_tag day.dinner.image_url, style:"box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22); border-radius:2px;"%>
+                <%= image_tag day.lunch.image_url, style:"box-shadow: 0 10px 14px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22); border-radius:2px;"%>
                </div>
               </div>
                   </div>
