--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -9,11 +9,9 @@
       height: 100%;
       margin: 0px;
       padding: 0px;
-      position: relative;
-      
   }
     footer {
-        @apply absolute bottom-0 flex text-sm px-5 items-center justify-evenly h-24 w-full bg-primary-500
+        @apply flex text-sm px-5 items-center justify-evenly h-24 w-full bg-primary-500
     };
     
     .nav-links {
