--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,10 @@
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
+<%= render "layouts/navbar" %>
   <body>
-    <div class="flex flex-col max-w-full h-screen justify-between">
-  <%= render "layouts/navbar" %>
+    <!--<div class="flex flex-col max-w-full h-full justify-between">-->
+  
     
     <!-- Notices / Alerts  -->    
     <p><%= notice %></p>
@@ -30,11 +30,12 @@
     <!-- End Devise Message -->
     
     <%= yield %>
-    <%= render "layouts/footer" %>
-    </div>
+    
+   <!--</div>-->
 
     <!-- Stimulus.js -->
     <script src="https://unpkg.com/stimulus/dist/stimulus.umd.js"></script>
     <script src="https://unpkg.com/tailwindcss-stimulus-components/dist/tailwindcss-stimulus-components.umd.js"></script>
   </body>
+  <%= render "layouts/footer" %>
 </html>
