--- a/app/views/users/plans/index.html.erb
+++ b/app/views/users/plans/index.html.erb
@@ -5,7 +5,7 @@
 
    <div class="flex flex-col mx-auto mt-8">
      <div class=" overflow-x-auto sm:-mx-6 lg:-mx-8">
-       <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8 flex-shrink-1">
+       <div class="py-2 align-middle inline-block w-full sm:px-6 lg:px-8 flex-shrink-1">
          <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
            <table class="min-w-full divide-y divide-gray-200">
              <thead class="bg-gray-50">
