--- a/app/views/users/plans/_new.html.erb
+++ b/app/views/users/plans/_new.html.erb
@@ -42,7 +42,7 @@
                   class=" bg-primary-300 text-gray-600 hover:bg-primary-800 hover:text-white  w-20 rounded-l cursor-pointer outline-none ">
                   <span class="m-auto text-2xl font-thin">−</span>
                 </button>
-                <%= f.number_field(:nb_of_days, in: 1..7, value: 1, class: "bg-white text-sm text-gray-900 text-center focus:outline-none border w-full text-gray-700 text-sm font-semibold border-primary-800 focus:border-primary-600 rounded-l-md w-full p-1 text-xl") %>
+                <%= f.number_field(:nb_of_days, in: 1..7, id: "nb_of_days", value: 1, class: "bg-white text-sm text-gray-900 text-center focus:outline-none border w-full text-gray-700 text-sm font-semibold border-primary-800 focus:border-primary-600 rounded-l-md w-full p-1 text-xl") %>
                 <button data-action="increment" id="increment"
                   class="bg-primary-300 text-gray-600 hover:bg-primary-800 hover:text-white  w-20 rounded-r cursor-pointer">
                   <span class="m-auto text-2xl font-thin">+</span>
