--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -44,10 +44,9 @@
                 </div>
                 <div
                   class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 bg-white rounded-r-md truncate">
-                  <div class="flex-1 px-4 py-2 text-sm truncate">
-                    <a href="#" class="text-gray-900 font-medium hover:text-gray-600"><%= current_user.daily_cal %>
-                      kcal</a>
-                    <p class="text-gray-500">Calories par jour</p>
+                  <div class="flex-1 px-4 py-2 text-sm truncate"> 
+                   <p class="text-gray-900 font-medium hover:text-gray-600"><%= current_user.daily_cal %> kcal</p>                  
+                    <p class="text-gray-500">Tes besoins par jour</p>
                   </div>
                 </div>
               </li>
@@ -69,7 +68,7 @@
                 <div
                   class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 bg-white rounded-r-md truncate">
                   <div class="flex-1 px-4 py-2 text-sm truncate">
-                    <a href="#" class="text-gray-900 font-medium hover:text-gray-600">IMC <%= current_user.bmi %></a>
+                    <p class="text-gray-900 font-medium hover:text-gray-600">IMC <%= current_user.bmi %></p>
                     <p class="text-gray-500"><%=current_user.bmi_text%></p>
                   </div>
 
@@ -101,8 +100,7 @@
                 <div
                   class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 bg-white rounded-r-md truncate">
                   <div class="flex-1 px-4 py-2 text-sm truncate">
-                    <a href="#"
-                      class="text-gray-900 font-medium hover:text-gray-600"><%= current_user.objective_title %></a>
+                    <p class="text-gray-900 font-medium hover:text-gray-600"><%= current_user.objective_title %></p>
                     <p class="text-gray-500">L'objectif que tu t'es fixé</p>
                   </div>
 
@@ -136,8 +134,8 @@
                 <div
                   class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 bg-white rounded-r-md truncate">
                   <div class="flex-1 px-4 py-2 text-sm truncate">
-                    <a href="#" class="text-gray-900 font-medium hover:text-gray-600"><%= current_user.activity_level_card %></a>
-                    <p class="text-gray-500">Activité physique</p>
+                    <p class="text-gray-900 font-medium hover:text-gray-600"><%= current_user.activity_level_card %></p>
+                    <p class="text-gray-500">Ton activité physique</p>
                   </div>
 
                 </div>
